# specification

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml  spec.toml
.circleci/: config.yml
.github/workflows/: cddl.yml  rust.yml
attributes/network/: 0000_base.adoc  0001_blockchain.adoc  0003_kvstore.adoc  0006_ledger_commands.adoc  0008_async.adoc  0009_account.adoc  0_base.adoc  1000_abci_backend.adoc  1001_abci_frontend.adoc  1002_idstore.adoc  10_delegation.adoc  10_idstore.adoc  11_kvstore_transfer.adoc  11_ledger_mintburn.adoc  11_ledger_tokens.adoc  11_proof.adoc  12_ledger_mintburn.adoc  13_kvstore_transfer.adoc  14_proof.adoc  15_compute.adoc  15_fee.adoc  16_fee_update.adoc  16_web.adoc  17_web_commands.adoc  1_blockchain.adoc  256_account_multisig.adoc  2_ledger.adoc  3_kvstore.adoc  4_events.adoc  4_ledger_transactions.adoc  5_data.adoc  6_ledger_commands.adoc  7_kvstore_commands.adoc  8_async.adoc  9_account.adoc  9_ledger_account.adoc
attributes/network/0009_account_features/: 0001_account_multisig.adoc
attributes/network/15_fee_table/: 0_fee_calls.cddl
attributes/network/5_data/: 0_accounts_count.adoc
attributes/network/9_account_features/: 0_account_ledger.adoc  15_account_fee.adoc  1_account_multisig.adoc  2_account_kvstore.adoc  3_account_tokens.adoc
attributes/network/cddl/: 0002_ledger.cddl  0005_data.cddl  0006_ledger_commands.cddl  0009_account.cddl  0010_delegation.cddl  0_base.cddl  1000_abci_backend.cddl  1002_idstore.cddl  10_delegation.cddl  10_idstore.cddl  11_kvstore_transfer.cddl  11_ledger_tokens.cddl  11_proof.cddl  12_ledger_mintburn.cddl  13_kvstore_transfer.cddl  14_proof.cddl  15_compute.cddl  15_fee.cddl  16_fee_update.cddl  (+15 more)
attributes/request/: 0002_delegation.adoc  15_fee.adoc  2_delegation.adoc  3_proof.adoc
attributes/response/: 0001_async.adoc  0002_delegation.adoc  1_async.adoc  2_delegation.adoc  3_proof.adoc
gherkin-tests/: Cargo.toml  README.md  example.feature
gherkin-tests/features/: base.feature
gherkin-tests/src/: cose.rs  main.rs  opts.rs  params.rs  steps.rs  world.rs
gherkin-tests/src/steps/: base.rs  ledger.rs
many-async-client/: Cargo.toml
many-async-client/src/: lib.rs
reftests/: Cargo.toml
reftests/src/: helpers.rs  main.rs  support.rs  tests.rs  types.rs
reftests/src/config/: ledger.json
reftests/src/support/: cbor.rs  cose.rs  percent.rs  protocol.rs  token_amount.rs  types.rs
reftests/src/support/message/: error.rs  request.rs  response.rs
reftests/src/support/types/: identity.rs
reftests/src/tests/: attributes.rs  protocol.rs
reftests/src/tests/attributes/: _2_ledger.rs  _4_events.rs
reftests/src/tests/attributes/_2_ledger/: ledger.rs
reftests/src/types/: identity.rs
reftests/src/types/identity/: cose.rs  cose_helpers.rs  message.rs  protocol.rs
reftests/src/types/identity/message/: error.rs  request.rs  response.rs
scripts/: make_cddl.bash
spec/: best_practices.adoc  deprecation.adoc  proof_hash_scheme.adoc  protocol.adoc  tendermint.adoc  usecases.adoc
spec/cddl/: delegation.cddl  many.cddl  types.cddl
spec/protocol/: attributes.adoc  delegation.adoc  endpoints.adoc  envelope.adoc  identity.adoc
src/rust/reftests/: Cargo.toml
src/rust/reftests/procmacros/: Cargo.toml
src/rust/reftests/procmacros/src/: lib.rs
src/rust/reftests/src/: tests.rs
src/rust/reftests/src/tests/: attributes.rs
src/rust/reftests/src/tests/attributes/: _2_ledger.rs
(+13 files in other folders)
