[package]
name = "many-async-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
coset = "0.3"
minicbor = "0.18"
num-bigint = "0.4"
rand = "0.8"
reqwest = "0.11"

many-error = { git = "http://github.com/liftedinit/many-rs", branch = "main" }
many-identity = { git = "http://github.com/liftedinit/many-rs", branch = "main", features = [ "testing" ] }
many-modules = { git = "http://github.com/liftedinit/many-rs", branch = "main" }
many-protocol = { git = "http://github.com/liftedinit/many-rs", branch = "main" }
many-types = { git = "http://github.com/liftedinit/many-rs", branch = "main" }
