[package]
name = "reftests"
version = "0.1.0"
edition = "2021"

[dependencies]
base32 = "0.4.0"
base64 = "0.13.0"
cbor-diag = "0.1.8"
ciborium = { version = "0.2.0", features = ["std"] }
clap = { version = "3.1.1", features = ["derive"] }
coset = "0.3.0"
crc-any = "2.4.0"
derive_builder = "0.10.2"
ed25519 = { version = "1.2.0", features = [ "std" ] }
ed25519-dalek = "1.0.1"
fixed = "1.11.0"
futures = "0.3.21"
gag = "1.0.0"
hex = "0.4.3"
inventory = "0.2.2"
linkme = "0.2.10"
many-error = { version = "0.1.0", git="https://github.com/liftedinit/many-rs.git" }
many-identity = { version = "0.1.0", git="https://github.com/liftedinit/many-rs.git", features = [ "serde", "testing" ] }
many-types = { version = "0.1.0", git="https://github.com/liftedinit/many-rs.git" }
minicbor = { version = "0.18.0", features = ["derive", "half", "std"] }
num-bigint = "0.4.3"
num-derive = "0.3.3"
num-traits = "0.2.14"
p256 = { version = "0.9.0", features = [ "pem", "ecdsa", "std" ] }
pkcs8 = { version = "0.8", features = [ "pem", "std", "encryption" ] }
rand = "0.7"
regex = "1.5.6"
reqwest = "0.11.9"
ring = "0.16.20"
serde = "1.0.136"
serde_json = "1.0.82"
sha3 = "0.9.1"
signature = "1.3"
static_assertions = "1.1.0"
reftests-macros = { path = "./procmacros" }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.29"

[dev-dependencies]
proptest = "1.0.0"
serde_test = "1.0.137"
