[package]
name = "spectests"
version = "0.1.0"
edition = "2021"

[dependencies]
cbor-diag = "0.1.8"
ciborium = { version = "0.2.0", features = ["std"] }
clap = { version = "3.1.1", features = ["derive"] }
coset = "0.3.0"
ed25519-dalek = "1.0.1"
futures = "0.3.21"
gag = "1.0.0"
hex = "0.4.3"
inventory = "0.2.2"
linkme = "0.2.10"
rand = "0.7"
regex = "1.5.6"
reqwest = "0.11.9"
ring = "0.16.20"
serde = "1.0.136"
serde_cbor = "0.11.2"
sha3 = "0.10.1"
reftests-macros = { path = "procmacros" }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
